--- a/pages/landing.html
+++ b/pages/landing.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <script src="/socket.io/socket.io.js"></script>
+
     <script>
       var socket = io();
       socket.emit("msg","A User Connected!");
@@ -13,15 +14,26 @@
         console.log(data);
       });
     </script>
-
     <div id="header">
-      <div id="navMenu"></div>
+      <div id="navMenu" onclick="console.log('test'); socket.emit('msg','Hamburger clicked');">
+        <svg id="hamburger">
+          <line class=".line" x1="0" y1="7" x2="30" y2="7" style="stroke:rgb(0,0,0);stroke-width:2" />
+          <line class=".line" x1="0" y1="15" x2="30" y2="15" style="stroke:rgb(0,0,0);stroke-width:2" />
+          <line class=".line" x1="0" y1="23" x2="30" y2="23" style="stroke:rgb(0,0,0);stroke-width:2" />
+        </svg>
+      </div>
     </div>
+    <div id="displayBox">
+      <table>
+        <tr>
+          <td>Dynamic entry goes here</td>
+        </tr>
+      </table>
 
-    <div id="displayBox">x</div>
-
+    </div>
     <div id="footer">
-      <div id="footerMenu"></div>
+      <div id="footerMenu">
+      Footer menu</div>
     </div>
 
 
